Bug 11202: Resize of nested frameset shouldn't update size of child twice, this is already handled by MouseDrag, r=nisheeth